# AsTeRICS

ARE/components/sensor.realsensegestures/: build.xml
ARE/components/sensor.realsensegestures/LICENSE/: OPENCV_opencv_BSD3Clause.txt
ARE/components/sensor.realsensegestures/src/main/java/eu/asterics/component/sensor/realsensegestures/: RealSenseGesturesInstance.java  RealSenseNativeConnector.java  RealSenseNativeConnectorThread.java
ARE/components/sensor.realsensegestures/src/main/java/eu/asterics/component/sensor/realsensegestures/helpers/: RealSenseLibraryResolver.java
ARE/components/sensor.realsensegestures/src/main/native/: CMakeLists.txt  helpers.cpp  jni_methods.cpp  library.cpp  recognizer.cpp  visualizer.cpp
ARE/components/sensor.realsensegestures/src/main/native/include/: eu_asterics_component_sensor_realsensegestures_RealSenseNativeConnector.h  helpers.h  jni_methods.h  library.h  recognizer.h  visualizer.h
ARE/components/sensor.realsensegestures/src/main/native/test/: main.cpp
ARE/components/sensor.realsensegestures/src/main/resources/: bundle_descriptor.xml
Documentation/ACS-Help/HTML/Plugins/processors/img/: Thumbs.db
Documentation/ACS-Help/HTML/Plugins/sensors/: RealSenseGestures.htm
Documentation/ACS-Help/HTML/Plugins/sensors/img/: Thumbs.db
